# vero

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  _BLOCKERS.MD  compose-example.yaml  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: FUNDING.yml  pull_request_template.md
.github/assertoor/: vero.yml
.github/workflows/: assertoor.yml  cargo-audit.yml  docker.yml  pip-audit.yml  pre-commit.yml  pytest.yml  verify-configs.yml  verify-spec-values-grandine.yml  verify-spec-values.yml
docs/: Caddyfile  Dockerfile  README.md  compatibility.md  index.md  instrumentation.md  mkdocs.yml  risks.md  running_vero.md  slashing_protection.md  using_multiple_beacon_nodes.md  why_vero.md
docs/docs/: index.md
docs/introduction/: faqs.md  index.md  risks.md  why_vero.md
docs/overrides/: main.html
docs/quick-start/: index.md
docs/reference/: cli_reference.md  instrumentation.md  using_multiple_beacon_nodes.md
docs/usage/: compatibility.md  mev.md
grafana/: vero-detailed.json  vero-simple.json
rust/grandine_bindings/: Cargo.toml  grandine_bindings.pyi  pyproject.toml
rust/grandine_bindings/src/: lib.rs  macros.rs  preset_gnosis.rs
rust/grandine_bindings/src/electra/: block.rs  mod.rs
scripts/: benchmark_ssz_lib_comparison.py  verify_presets_rust.py
src/: args.py  initialize.py  main.py  shutdown.py  tasks.py
tests/: benchmark.py  conftest.py  ssz_bitfields.py  ssz_objects.py  test_args.py  test_gil_disabled.py  test_main.py
(+131 files in other folders)
